<resources>

    <string name="app_name">知乎小报</string>
    <string name="app_sub_name">一个开源知乎日报客户端</string>
    <string name="app_author">Cundong</string>
    
    <string name="settings_settings_title">偏好设置</string>
    
    <string name="setting_noimage_nowifi_title">无图模式</string>
    <string name="setting_noimage_nowifi_summary">2G/3G网络下不显示图片</string>
    <string name="setting_dark_theme_title">夜间模式</string>
    <string name="setting_dark_theme_summary">设置为夜间模式</string>
    
    <string name="setting_clearcache_title">清除缓存</string>
    <string name="setting_aboutme">关于</string>
    <string name="setting_aboutme_title">关于我们</string>
    <string name="setting_aboutme_summary">关于我们</string>
	<string name="setting_version_title">版本信息</string>
	
	<string name="actionbar_title_fav">收藏夹</string>
	<string name="actionbar_title_setting">偏好设置</string>
	
	<string name="actionbar_item_fav_cancel">取消收藏</string>
	<string name="actionbar_item_fav_add">收藏</string>
	
	<string name="fav_add_success">添加收藏成功</string>
	<string name="fav_add_fail">添加收藏失败</string>
	
	<string name="fav_cancel_success">已取消收藏</string>
	
	<string name="offline_download_doing">正在离线最新内容</string>
	<string name="offline_download_done">离线最新内容完成</string>
	<string name="offline_download_fail">离线最新内容失败</string>
	
	<string name="action_bar_share_with">Share with…</string>
	
	<string name="listview_hotnews">今日热闻</string>
	
	<string name="setting_aboutme_version">%1$s\r\nVersion:%2$s</string>
	<string name="setting_aboutme_text">%1$s%2$s%3$sby %4$s</string>
</resources>