<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="settings_settings"
        android:title="@string/settings_settings_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="noimage_nowifi?"
            android:summary="@string/setting_noimage_nowifi_summary"
            android:title="@string/setting_noimage_nowifi_title" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="dark_theme?"
            android:summary="@string/setting_dark_theme_summary"
            android:title="@string/setting_dark_theme_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/setting_aboutme" >
        <Preference
            android:key="version"
            android:title="@string/setting_version_title" />
        <Preference
            android:key="about"
            android:title="@string/setting_aboutme_title" />
    </PreferenceCategory>

</PreferenceScreen>